--- a/changelog.txt
+++ b/changelog.txt
@@ -1,17 +1,10 @@
 CHANGELOG
 
-January 11, 2022
+Feburary 18, 2022
 
-Version 0.6 BETA
+Version 1.1 ALPHA
 
-- Fixed a bug with app windows having multiple toolbars, now there is only one extra when an app is opened/closed
-- Made a sort of functional web browser that loads Bing as google doesn't work with embeds, this browser even has it's own startup sequence!
-- Added a link to the old site in the welcome window, look at the link below the Discord tag
-- Changed the date to January 11 2022
-
-Next update plans
-
-- Changing the WylieGDPS tools to have the changelog instead
-- Making another HTML document to embed as a socials app
-- Changing the background to something else
-- Removing the meme button
+- Changed the Background (Added in version 0.8.2 BETA)
+- Made the browser open Friday Night Funkin' instead.
+- Made the GDPS tools button a changelog (Added in version 0.7.1 BETA)
+- Waiting for Geometry Dash 2.2....
